--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,45 @@ code {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 13px;
+    height: 15px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 100vh;
+  }
+
+  /* .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: red;
+  } */
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: red;
+}
+
+* {
+  @apply 
+    scrollbar:!w-3 scrollbar:!h-3 scrollbar:!bg-transparent scrollbar:!rounded-full
+    dark:scrollbar:!bg-transparent
+
+    scrollbar-track:!bg-transparent scrollbar-track:!rounded-full 
+    dark:scrollbar-track:!bg-transparent
+
+    scrollbar-thumb:!rounded-full scrollbar-thumb:!bg-gray-400/60 scrollbar-thumb:!border-2 scrollbar-thumb:!border-gray-200 scrollbar-thumb:!border-solid 
+    dark:scrollbar-thumb:!border-gray-700 dark:scrollbar-thumb:!bg-gray-500;
+}
+
+body {
+  @apply bg-gray-100 dark:bg-gray-700;
+  /* BLUEISH WHITE GRADIENT COLORS */
+  /* ebf4f5 */
+  /* b5c6e0 */
+}
